# himena-relion

./: .gitignore  404.html  LICENSE  README.md  extra_style.css  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: getting_started.md  index.md  installation.md
docs/external_jobs/: builtin.md  dev.md  index.md
examples/: external_job_flip_handedness.py
external_jobs/: index.html
external_jobs/builtin/: index.html
external_jobs/dev/: index.html
getting_started/: index.html
installation/: index.html
search/: search_index.json
src/himena_relion/: __init__.py  __main__.py  _adapt.py  _bild.py  _configs.py  _impl_objects.py  _job.py  _job_class.py  _job_dir.py  _pipeline.py  _utils.py  _version.py  consts.py  io.py  pipeline_watcher.py  startup.py  testing.py
src/himena_relion/_annotated/: __init__.py  autopick.py  class_.py  compute.py  ctffind.py  ctfrefine.py  dynamight.py  extract.py  helix.py  import_.py  inimodel.py  io.py  localres.py  manualpick.py  mcor.py  misc.py  modelangelo.py  multibody.py  polish.py  post.py  running.py  sampling.py  select.py  tomo.py
src/himena_relion/_image_readers/: __init__.py  _array.py
src/himena_relion/_widgets/: __init__.py  _content_info.py  _job_edit.py  _job_widgets.py  _magicgui.py  _main.py  _misc.py  _path_input.py  _plot.py  _qviewbox.py  _spinbox.py  _trash_widget.py  _view_nd.py  _vispy.py  _widgets_external.py
src/himena_relion/_widgets/_shared/: picking.py  resizer.py
src/himena_relion/_widgets/_vispy/: __init__.py  _mask_mesh.py  _viewbox.py  _viewer.py  isosurface.py  motion.py
src/himena_relion/io/: __init__.py  _impl.py  _io.py  job_utils.py
src/himena_relion/pipeline/: __init__.py  _flowchart.py  _gui_state.py  _startscreen.py  _table_view.py  _utils.py  widgets.py
src/himena_relion/relion5/: __init__.py  _builtins.py  _connections.py  _continues.py
src/himena_relion/relion5/extensions/: __init__.py
src/himena_relion/relion5/widgets/: __init__.py  _class2d.py  _class3d.py  _ctf.py  _extract.py  _frames.py  _import_others.py  _initial_model.py  _join.py  _localres.py  _manual_pick.py  _mask_create.py  _modelangelo.py  _motioncor.py  _pick.py  _polish.py  _postprocess.py  _refine.py  _select.py  _shared.py  _subtract.py
src/himena_relion/relion5_tomo/: __init__.py  _builtins.py  _cli_wrappers.py  _connections.py  _continues.py  _tomo_utils.py
src/himena_relion/relion5_tomo/_builtins/: __init__.py  builtin_jobs.py
src/himena_relion/relion5_tomo/extensions/: __init__.py  erase_gold.py
src/himena_relion/relion5_tomo/widgets/: __init__.py  _aligntilt.py  _class3d.py  _ctf.py  _extract.py  _import.py  _initial_model.py  _mask_create.py  _motioncor.py  _polish.py  _postprocess.py  _recon.py  _reconstruct.py  _refine.py  _select.py  _shared.py  _tilt_series.py  _tomogram.py
src/himena_relion/run/: __init__.py  _main.py  _path_input.py
src/himena_relion/schemas/: __init__.py  _misc.py  _movie_tilts.py  _pipeline.py  _tilt_series.py
tests/: _utils.py  conftest.py  test_annotations.py  test_as_himena_plugin.py  test_common_widgets.py  test_extensions.py  test_io.py  test_job_connection.py  test_jobs.py  test_pipeline.py  test_plot_widget.py  test_relion_actions.py  test_trash.py  test_utils.py
tests/default_pipelines/: full.star  no_input.star
tests/job_pipelines/: refine3d.star
tests/jobs_spa/AutoPick/job001/: job.star
tests/jobs_spa/AutoPick/job002/: job.star
tests/jobs_spa/Class2D/job001/: job.star
tests/jobs_spa/Class3D/job001/: job.star
tests/jobs_spa/Class3D/job002/: job.star
tests/jobs_spa/CtfFind/job001/: job.star
tests/jobs_spa/CtfRefine/job001/: job.star
tests/jobs_spa/CtfRefine/job002/: job.star
tests/jobs_spa/DynaMight/job001/: job.star
tests/jobs_spa/Extract/job001/: job.star
tests/jobs_spa/Extract/job002/: job.star
tests/jobs_spa/Import/job001/: job.star
tests/jobs_spa/Import/job002/: job.star
tests/jobs_spa/Import/job003/: job.star
tests/jobs_spa/InitialModel/job001/: job.star
tests/jobs_spa/JoinStar/job001/: job.star
tests/jobs_spa/JoinStar/job002/: job.star
tests/jobs_spa/JoinStar/job003/: job.star
tests/jobs_spa/LocalRes/job001/: job.star
tests/jobs_spa/LocalRes/job002/: job.star
tests/jobs_spa/ManualPick/job001/: job.star
tests/jobs_spa/MaskCreate/job001/: job.star
tests/jobs_spa/ModelAngelo/job001/: job.star
tests/jobs_spa/MotionCorr/job001/: job.star
tests/jobs_spa/MultiBody/job001/: job.star
tests/jobs_spa/Polish/job001/: job.star
tests/jobs_spa/Polish/job002/: job.star
tests/jobs_spa/PostProcess/job001/: job.star
tests/test_widgets/: test_aligntilt.py  test_class2d.py  test_class3d.py  test_ctf.py  test_extract.py  test_import.py  test_initial_model.py  test_localres.py  test_modelangelo.py  test_motion_cor.py  test_others.py  test_pick.py  test_postprocess.py  test_reconstruct_particle.py  test_refine_3d.py  test_select.py  test_subtract.py  test_tomogram.py
(+60 files in other folders)
