[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "himena-relion"
dynamic = ["version"]
description = 'RELION GUI implemented as a himena plugin'
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "hanjinliu", email = "liuhanjin.sc@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "starfile-rs>=0.1.1",
  "imodmodel>=0.1.0",
  "rich",
  "scipy>=1.16.3",
  "cmap>=0.6.2",
  "vispy>=0.15.2",
  "mrcfile>=1.5.4",
  "tifffile>=2025.10.16",
  "watchfiles>=1.1.0",
  "superqt>=0.7.6",
  "himena>=0.1.4",
  "matplotlib>=3.7.2",
]

[project.urls]
Documentation = "https://github.com/hanjinliu/himena-relion#readme"
Issues = "https://github.com/hanjinliu/himena-relion/issues"
Source = "https://github.com/hanjinliu/himena-relion"

[project.scripts]
himena-relion = "himena_relion.__main__:main"

[tool.hatch.version]
path = "src/himena_relion/__init__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/himena_relion tests}"

[tool.coverage.run]
source_pkgs = ["himena_relion", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
himena_relion = ["src/himena_relion", "*/himena-relion/src/himena_relion"]
tests = ["tests", "*/himena-relion/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.entry-points."himena.plugin"]
"RELION 5" = "himena_relion.relion5"
"RELION 5 Tomo" = "himena_relion.relion5_tomo"
"RELION Job IO" = "himena_relion.io"
"RELION pipeline" = "himena_relion.pipeline"
